k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-client-deployment
  namespace: envoy-grpc
  labels:
    app: grpc-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-client
  template:
    metadata:
      labels:
        app: grpc-client
    spec:
      volumes:
        - name: envoy-config
          configMap:
            name: client-sidecar-envoy
      containers:
        - name: envoy
          image: envoyproxy/envoy-alpine:v1.12.2
          volumeMounts:
            - name: envoy-config
              mountPath: /var/opt/envoy
          command: ["envoy", "-c", "/var/opt/envoy/envoy.yaml"]
          resources:
            limits:
              memory: 100Mi
          ports:
            - name: app
              containerPort: 15001
            - name: envoy-admin
              containerPort: 8001

        - name: grpc-client
          image: seion/envoy-sidebar-for-grpc-lb-client
          imagePullPolicy: Always
          env:
            - name: GRPC_SERVER_HOST
              value: "127.0.0.1:9001"
            - name: PORT
              value: "8080"
