k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-client-service
  namespace: envoy-grpc
spec:
  type: NodePort
  selector:
    app: grpc-client
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
