k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server-deployment
  namespace: envoy-grpc
  labels:
    app: grpc-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grpc-server
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: grpc-server
    spec:
      volumes:
        - name: envoy-config
          configMap:
            name: server-sidecar-envoy
      containers:
        - name: envoy
          image: envoyproxy/envoy:latest
          volumeMounts:
            - name: envoy-config
              mountPath: /var/opt/envoy
          command: ["envoy", "-c", "/var/opt/envoy/envoy.yaml"]
          resources:
            limits:
              memory: 512Mi
          ports:
            - name: app
              containerPort: 15001
            - name: envoy-admin
              containerPort: 8001

        - name: grpc-server
          image: seion/grpc-lb-with-envoy-server
          imagePullPolicy: Always
          ports:
            - name: grpc
              containerPort: 50051
              protocol: TCP
          env:
            - name: PORT
              value: 50051
          resources:
            requests:
              memory: 200Mi
              cpu: 500m
      terminationGracePeriodSeconds: 60
